--- a/style.css
+++ b/style.css
@@ -66,8 +66,14 @@ a:hover{
     justify-content: space-between;
     margin: 85px 0 0 0;
 }
+h1{
+    font-family: 'Playfair Display', sans-serif;
+    font-weight: 700;
+}
 .explore-travel p{
     margin: 40px 0 40px 0;
+    font-family: 'Inter';
+    font-weight: 400;
 }
 .explore-travel-input{
     display: flex;
@@ -76,20 +82,29 @@ a:hover{
     /* height: 120px; */
 
 }
-.explore-travel-input>div:last-child{
+.form{
+    width: 470px;
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     margin: 20px 0 0 0;
+}
+/* .form div:last-child{
+    margin: 40px 0 0 0;
+} */
+.form div input:last-child{
+    margin: 0 0 0 20px;
 }
 input{
     height: 40px;
 }
-[placeholder="Activity"], [placeholder="Date"]{
-    margin: 0 0 0 20px;
-}
+
 
 .explore-travel-img{
     width: 506px;;
     height:483px;
-    margin: 20px 0 0 0;
+    margin: 20px 0 0 50px;
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url(./assets/thousand-01\ 1.svg);
